// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading indicator default renders correctly 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
    >
      <span
        aria-label="Loading"
        class="euiLoadingSpinner emotion-euiLoadingSpinner-l"
        role="progressbar"
      />
    </div>
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;

exports[`Loading indicator elastic renders correctly 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
    >
      <span
        aria-label="Loading"
        class="euiLoadingElastic emotion-euiLoadingElastic"
        role="progressbar"
      >
        <span
          data-euiicon-type="logoElastic"
        />
      </span>
    </div>
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    />
  </div>
</div>
`;
